--- a/text/xharmi00-bibliography.bib
+++ b/text/xharmi00-bibliography.bib
@@ -28,6 +28,117 @@
         Brno University of Technology, Faculty of Information Technology
     },
     year = {2018},
+    note = {lecture notes}
+}
+
+@INPROCEEDINGS{favAI,
+    author = {Lengál, Ondřej and Vojnar, Tomáš},
+    title = {Abstract Interpretation},
+    booktitle = {Formal Analysis and Verification},
+    publisher = {
+        Brno University of Technology, Faculty of Information Technology
+    },
+    year = {2018},
+    note = {lecture notes}
+}
+
+@BOOK{projectPracticeMarcin2018,
+    author = {Marcin, Vladimír},
+    title = {
+        Static Analysis of Concurrency Problems in the Facebook Infer
+        Tool
+    },
+    publisher = {
+        Brno University of Technology, Faculty of Information Technology
+    },
+    year = {2018},
+    note = {project practice}
+}
+
+@BOOK{programAnalysisNielson,
+    author = {Nielson, Flemming and Nielson, Riis Hanne and Hankin, Chris},
+    title = {Principles of Program Analysis},
+    publisher = {Springer-Verlag},
+    address = {Berlin},
+    year = {2005},
+    ISBN = {3-540-65410-0}
+}
+
+@INCOLLECTION{AIBasedFormalMethodsCousot,
+    author = {Cousot, Patrick},
+    title = {
+        Abstract Interpretation Based Formal Methods and Future
+        Challenges, invited paper
+    },
+    booktitle = {<<~Informatics\,---\,10~Years Back, 10~Years Ahead~>>},
+    editor = {Wilhelm, Reinhard},
+    year = {2001},
+    series = {Lecture Notes in Computer Science},
+    volume = {2000},
+    pages = {138\,--\,156},
+    publisher = {Springer-Verlag}
+}
+
+@INPROCEEDINGS{AILatticeModelCousot,
+    author = {Cousot, Patrick and Cousot, Radhia},
+    title = {
+        Abstract interpretation: a~unified lattice model for static
+        analysis of programs by construction or approximation of
+        fixpoints
+    },
+    booktitle = {
+        Conference Record of the Fourth Annual ACM SIGPLAN-SIGACT
+        Symposium on Principles of Programming Languages
+    },
+    address = {Los Angeles, California},
+    publisher = {ACM Press, New York, NY},
+    pages = {238\,--\,252},
+    year = {1977}
+}
+
+@MISC{AIInNutshellCousot,
+    author = {Cousot, Patrick},
+    title = {Abstract Interpretation in a~Nutshell [online]},
+    url = {https://www.di.ens.fr/~cousot/AI/IntroAbsInt.html},
+    note = {[cit. 2019-05-02]}
+}
+
+@MISC{AICousotWeb,
+    author = {Cousot, Patrick},
+    title = {Abstract Interpretation [online]},
+    url = {https://www.di.ens.fr/~cousot/AI},
+    note = {2008-08-05 [cit. 2019-05-02]}
+}
+
+@INPROCEEDINGS{wideningNarrowingCousot,
+    author = {Cousot, Patrick and Cousot, Radhia},
+    title = {
+        Comparing the Galois Connection and Widening/Narrowing
+        Approaches to Abstract Interpretation, invited paper
+    },
+    editor = {Bruynooghe, M. and Wirsing, M.},
+    pages = {269\,--\,295},
+    booktitle = {
+        Proceedings of the International Workshop Programming Language
+        Implementation and Logic Programming, PLILP'92
+    },
+    series = {
+        Leuven, Belgium, 13\,--\,17 August 1992, Lecture Notes in Computer
+        Science 631
+    },
+    publisher = {Springer-Verlag, Berlin, Germany},
+    year = {1992}
+}
+
+@INPROCEEDINGS{favLatticesAndFixpoints,
+    author = {Vojnar, Tomáš},
+    title = {Lattices and Fixpoints for Symbolic Model Checking},
+    booktitle = {Formal Analysis and Verification},
+    publisher = {
+        Brno University of Technology, Faculty of Information Technology
+    },
+    year = {2018},
+    note = {lecture notes}
 }
 
 %===============================================================================
