--- a/text/xharmi00.tex
+++ b/text/xharmi00.tex
@@ -16,6 +16,7 @@
 \documentclass[english, czech, zadani, odsaz]{fitthesis}
 
 % Basic packages are in template file fitthesis.cls.
+\usepackage{subcaption}
 
 % Setting of a path to the pictures.
 \graphicspath{{figures/}{./figures/}}
@@ -198,7 +199,7 @@
 
 
     \ifODSAZ
-        \setlength{\parskip}{0.5 \bigskipamount}
+        \setlength{\parskip}{.5 \bigskipamount}
     \else
         \setlength{\parskip}{0pt}
     \fi
